fixed header and footer white space & added padding to text

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,8 @@ body {
 	line-height: 1.5;
 	color:black;
 	background-color: white;
+    margin: 0;
+    padding: 0;
 }
 
 h1,
@@ -98,6 +100,8 @@ a:focus {
 .about-me-text{
     max-width: 50rem;
     margin: 3rem auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 .button-links {
@@ -151,9 +155,7 @@ a:focus {
     h6 {
         text-align: center;
     }
-    .menu-toggle {
-        display: none;
-    }
+    
 
     
 
@@ -183,4 +185,5 @@ a:focus {
     width: 100%;
     bottom: 0%;
     left: 0%;
+    height: 2rem;
 }
